<resources>
    <string name="app_name">UCL Momo Accounts</string>
    <string name="action_settings">Settings</string>
    <string name="account_number">Account number…</string>
    <string name="label_search">Search</string>
    <string name="amount">GHS %s</string>
    <string name="amount_alt">GHS\n%s</string>
    <string name="location">%$1s, %$2s</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cd_falling_coins">falling coins</string>
    <string name="cd_previous_screen">Go back to previous screen</string>
    <string name="label_game_played">Game Played</string>
    <string name="label_selected_numbers">Selected Numbers</string>
    <string name="label_possible_winnings">Possible Winnings</string>
    <string name="label_total">Total</string>
    <string name="label_make_payment">Make Payment</string>
    <string name="label_payment">Payment</string>
    <string name="label_enter_amount">Enter Amount here (GHS 1 and above)</string>
    <string name="label_enter_phone">Enter Phone number here</string>
    <string name="label_check_balance">Check Balance</string>
    <string name="disbursement_balance">Disbursement Balance</string>
    <string name="collections_balance">Collections Balance</string>
    <string name="test_ipaygh_sdk">Test IPAYGH SDK</string>
</resources>
