<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="receipt"
            type="com.uclgroupgh.momoapitesting.models.PaymentReceipt" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_A700"
        tools:context=".fragment.PaymentFragment">


        <ImageView
            android:layout_width="149dp"
            android:layout_height="165dp"
            android:layout_gravity="end"
            android:contentDescription="@string/cd_falling_coins"
            android:rotation="33"
            android:src="@drawable/coins" />

        <ImageView
            android:layout_width="149dp"
            android:layout_height="165dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/cd_falling_coins"
            android:rotation="33"
            android:src="@drawable/coins" />

        <ImageView
            android:layout_width="149dp"
            android:layout_height="165dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/cd_falling_coins"
            android:rotation="-27"
            android:rotationX="36"
            android:rotationY="-26"
            android:src="@drawable/coins" />

        <!-- TODO: Update blank fragment layout -->
        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleColor="#000000"
            app:mrl_rippleDimension="10dp"
            app:mrl_rippleDuration="200"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_previous_screen"
                android:src="@drawable/ic_arrow" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/payment_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/varelaround"
                android:text="@string/label_payment"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext"
                android:fontFamily="@font/varelaround"
                android:hint="@string/label_enter_amount"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="40dp"
                android:padding="15dp"
                android:text="@={receipt.amountStaked}"
                android:textSize="@dimen/ts"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/payment_header"
                app:validateEmpty="@{true}" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/momo_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext"
                android:fontFamily="@font/varelaround"
                android:hint="@string/label_enter_phone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="40dp"
                android:padding="15dp"
                android:text="@={receipt.playerNumber}"
                android:textSize="@dimen/ts"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/amount"
                app:validateEmpty="@{true}" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/payment_ripple"
                app:layout_constraintTop_toBottomOf="@id/momo_number">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ticket_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/background_numbers_ticket"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@id/momo_number">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@string/label_game_played"
                            android:textAlignment="center"
                            android:textColor="@color/md_grey_400"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/game_played"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@{receipt.gamePlayed}"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@string/label_selected_numbers"
                            android:textAlignment="center"
                            android:textColor="@color/md_grey_400"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/selected_numbers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@{receipt.selectedNumbers}"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@string/label_possible_winnings"
                            android:textAlignment="center"
                            android:textColor="@color/md_grey_400"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/possible_winnings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@{@string/amount(receipt.possibleWinnings)}"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/total_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/background_numbers_selected"
                        android:orientation="vertical"
                        android:padding="20dp"
                        app:layout_constraintTop_toBottomOf="@id/ticket_info_layout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/varelaround"
                            android:text="@string/label_total"
                            android:textAlignment="center"
                            android:textColor="@color/orange_900"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/nunito_bold"
                            android:text="@{@string/amount(receipt.amountStaked)}"
                            android:textAlignment="center"
                            android:textColor="@color/orange_A700"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/payment_ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:mrl_rippleAlpha="0.1"
                app:mrl_rippleColor="#000000"
                app:mrl_rippleDimension="10dp"
                app:mrl_rippleDuration="200"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleRoundedCorners="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/payment_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/background_selectable_payment"
                    android:fontFamily="@font/varelaround"
                    android:text="@string/label_make_payment"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ts_big"
                    android:textStyle="bold" />
            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>